--- a/style.css
+++ b/style.css
@@ -6,25 +6,29 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 62.5%;
+}
+
 .details{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-content: center;
     justify-items: center;
     height: 40px;
-    background-color: rgb(146, 49, 49);
+    background-color: rgb(251, 169, 44);
     padding: 0px 20px;
 }
 
 .details label{
-    font-size: 14px;
+    font-size: 1.6rem;
     font-family: 'Roboto', sans-serif;
     color: white;
 }
 
 .details-container{
-    font-size: 14px;
     color: rgb(255, 255, 255);
+    font-size: 1.6rem;
 }
 
 .details-container i{
@@ -37,9 +41,9 @@ header{
     height: 100px;
     align-content: center;
     justify-items: center;
-    font-size: 16px;
+    
     width: 100%;
-    background-color: red;
+    /* background-color: red; */
 }
 
 header nav{
@@ -55,6 +59,7 @@ header nav a{
     font-family: 'Roboto', sans-serif;
     color: rgb(251, 169, 44);
     text-transform: uppercase;
+    font-size: 1.6rem;
     font-weight: 700;
 }
 
@@ -63,6 +68,7 @@ header nav a:hover{
 }
 
 header nav i{
+    font-size: 1.4rem;
     color: rgb(251, 169, 44);
 }
 
@@ -97,8 +103,16 @@ header nav i:hover{
 
 #myCarousel-indicators>button {
     border-radius: 50%;
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
+}
+
+.carousel-caption h5{
+    font-size: 1.6rem;
+}
+
+.carousel-caption p {
+    font-size: 1.6rem;
 }
 
 .banner-text{
@@ -111,20 +125,20 @@ header nav i:hover{
 
 .banner-text h1{
     font-family: 'Roboto', sans-serif;
-    font-size: 74px;
+    font-size: 7.4rem;
     font-weight: 300;
     color: rgb(0, 0, 0);
 }
 
 .banner-text h2 {
     font-family: 'Roboto', sans-serif;
-    font-size: 64px;
+    font-size: 6.4rem;
     font-weight: 600;
     color: rgb(251, 169, 44);
 }
 
 .banner-text p{
-    font-size: 20px;
+    font-size: 2rem;
     font-family: 'Roboto', sans-serif;
     color: rgb(0, 0, 0);
     text-align: justify;
@@ -135,6 +149,7 @@ header nav i:hover{
     color: rgb(255, 255, 255);
     border: none;
     font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
     padding: 10px 20px;
 }
 
@@ -142,63 +157,240 @@ header nav i:hover{
     background-color: rgb(15, 15, 15);
 }
 
+.currency{
+    display: grid;
+    grid-template-rows: 10% 90%;
+    height: 600px;
+    width: 100%;
+}
+
+.currency .currency-label{
+    display: grid;
+    width: 100%;
+    /* background-color: red; */
+    align-content: center;
+    justify-items: center;
+}
+
+.currency label{
+    font-size: 2.8rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.currency label span{
+    color: rgb(251, 169, 44);
+}
+
+.currency .three-box{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* background-color: blue; */
+    padding: 0px 20px;
+    gap: 20px;
+}
+
+.img-1{
+    display: grid;
+    grid-auto-rows: repeat(2, 1fr);
+    height: 50%;
+    background-image: url('pictures/Bit1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0px 20px;
+}
+
+.img-2 {
+    display: grid;
+    grid-auto-rows: repeat(2, 1fr);
+    height: 50%;
+    background-image: url('pictures/Bit2.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0px 20px;
+}
+
+.img-3 {
+    display: grid;
+    grid-auto-rows: repeat(2, 1fr);
+    height: 50%;
+    background-image: url('pictures/Bit3.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0px 20px;
+}
+
+.bitcoin-transaction{
+    display: grid;
+    margin-top: 50%;
+    background-color: rgb(255, 255, 255);
+    height: 70%;
+    border: 1px solid rgb(128, 128, 128);
+    align-content: center;
+    justify-items: center;
+    padding: 0px 10px;
+    gap: 15px;
+}
+
+.bitcoin-transaction label{
+    font-size: 3.0rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+.bitcoin-transaction p{
+    font-size: 1.6rem;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.bitcoin-exchange {
+    display: grid;
+    margin-top: 50%;
+    background-color: rgb(255, 255, 255);
+    height: 70%;
+    border: 1px solid rgb(128, 128, 128);
+    align-content: center;
+    justify-items: center;
+    padding: 0px 10px;
+    gap: 15px;
+}
+
+.bitcoin-exchange label {
+    font-size: 3.0rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+.bitcoin-exchange p {
+    font-size: 1.6rem;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.bitcoin-investment {
+    display: grid;
+    margin-top: 50%;
+    background-color: rgb(255, 255, 255);
+    height: 70%;
+    border: 1px solid rgb(128, 128, 128);
+    align-content: center;
+    justify-items: center;
+    padding: 0px 10px;
+    gap: 15px;
+}
+
+.bitcoin-investment label {
+    font-size: 3.0rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+.bitcoin-investment p {
+    font-size: 1.6rem;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+
+.img-1 button{
+    background-color: rgb(0, 0, 0);
+    padding: 15px 20px;
+    color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
+    border: none;
+    margin-top: 20%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.img-2 button {
+    background-color: rgb(0, 0, 0);
+    padding: 15px 20px;
+    color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
+    border: none;
+    margin-top: 20%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.img-3 button {
+    background-color: rgb(0, 0, 0);
+    padding: 15px 20px;
+    color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
+    border: none;
+    margin-top: 20%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+@media only screen and (max-width: 69.625em){
+    .banner{
+        grid-template-columns: none;
+        grid-template-rows: repeat(2, 1fr);
+        height: auto;
+        width: 100%;
+        padding: 0px;
+    }
+
+    .banner-text{
+        padding: 0px 20px;
+    }
+    .carousel-item img{
+        width: 100%;
+    }
 
 
+}
 
+@media only screen and (max-width: 61.5625em){
+    header nav{
+        grid-template-columns: repeat(5, 1fr);
+        gap: 5px;
+    }
 
+    header nav .fa-magnifying-glass{
+        display: none;
+    }
 
+    header nav a{
+        font-size: 1.5rem;
+    }
 
+    /* html{
+        font-size: 50%;
+    }     */
+}
 
-
-
-
-
-/* @media only screen and (max-width: 1215px) {
+@media only screen and (max-width:46.0625em){
     header nav a{
         display: none;
     }
 
-    .fa-magnifying-glass{
-        display: none;
+    header nav{
+        grid-template-columns: 1fr;
+        float: right;
     }
 
-    .fa-bars{
+    header nav .fa-bars{
         display: grid;
     }
-} */
+}
 
-/* @media only screen and (max-width: 1778px) {
-    body{
-        font-size-adjust: 1;
+/* @media only screen and (max-width: 68.75em) {
+    html{
+        font-size: 50%;
     }
 }
 
-@media only screen and (max-width: 872px) {
-    .fa-magnifying-glass {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 792px) {
-    header nav a{
-        display: none;
-    }
-
-    .fa-bars {
-        display: block;
+@media only screen and (max-width: 52.8125em){
+    html{
+        font-size: 40%;
     }
 } */
-
-@media only screen and (max-width: 1075px) {
-    .banner-text h1 {
-        font-size: 80%;
-    }
-
-    .banner-text h2 {
-        font-size: 80%;
-    }
-
-    .banner-text p {
-        font-size: 80%;
-    }
-}
